fixed aligning problem

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ nav {
     background: transparent;
     margin: 0px;
     position: absolute;
-    left: 39%;
+    left: 35%;
     top: 60%;
 
     -webkit-animation: fadein 4s; /* Safari, Chrome and Opera > 12.1 */
